-
Bug
-
Resolution: Done
-
P1: Critical
-
5.12
-
None
-
ebfcc404a172160baccd67fa72f8199b78ff5141
Building with clang5.0.2 on linux64 (ubuntu 14.04)
/home/build/Buildbot/qt5-analysis-linux64/source/qtquickcontrols2/src/imports/platform/qquickplatformmessagedialog.cpp:379:51: error: use of overloaded operator '<<' is ambiguous (with operand types 'QQmlInfo' and 'QPlatformDialogHelper::StandardButton')
default: qmlWarning(this) << "unknown button" << button; break;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~