qquickplatformmessagedialog: fix build error

Not sure why it's considered ambiguous, but since it's an unknown
value, it's fine to print it as an int.

Task-number: QTBUG-69916
Change-Id: I50335bd140626aa220e0468aef0fd1b3b34e3042
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@qt.io>
Reviewed-by: J-P Nurmi <jpnurmi@gmail.com>